[package]
name = "case_transform"
version = "0.1.0"
authors = ["L. Preston Sego III <LPSego3+dev@gmail.com>"]
repository = "https://github.com/NullVoxPopuli/case_transform"

[lib]
name = "case_transform"
crate-type = ["dylib"]

[dependencies]
inflections = { git = "https://github.com/calebmer/inflections" }
helix = "0.6.1"
