[package]
name = "case_transform"
version = "0.1.0"
authors = ["L. Preston Sego III <LPSego3+dev@gmail.com>"]
repository = "https://github.com/NullVoxPopuli/case_transform"

[package.metadata.thermite]
github_releases = true
github_release_type = "latest"
cargo_project_path = "ext/case_transform"

[lib]
name = "case_transform"
crate-type = ["dylib"]

[dependencies]
inflections = { git = "https://github.com/calebmer/inflections" }
ruru = "0.8.0"
